--- a/app/src/main/res/layout/fragment_prediction.xml
+++ b/app/src/main/res/layout/fragment_prediction.xml
@@ -26,6 +26,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_prediction_date"
                 style="@style/txt_400_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
