--- a/app/src/main/res/layout/picker_htg_calander.xml
+++ b/app/src/main/res/layout/picker_htg_calander.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -31,13 +32,20 @@
         android:layout_height="@dimen/dimen_60"
         android:gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/iv_htc_left"
-            android:layout_width="@dimen/dimen_16"
-            android:layout_height="@dimen/dimen_16"
-            android:layout_marginStart="@dimen/margin_4"
-            android:contentDescription="@string/back"
-            android:src="@drawable/ios_arrow_left" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_calendar_back"
+            android:layout_margin="@dimen/margin_4"
+            android:layout_width="@dimen/dimen_30"
+            android:layout_height="@dimen/dimen_30"
+            app:cardCornerRadius="@dimen/dimen_30">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_12"
+                android:layout_height="@dimen/dimen_12"
+                android:contentDescription="@string/back"
+                android:src="@drawable/ios_arrow_left"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_htc_title"
@@ -49,13 +57,20 @@
             android:textColor="@color/textColor"
             android:textAlignment="center" />
 
-        <ImageView
-            android:id="@+id/iv_htc_right"
-            android:layout_width="@dimen/dimen_16"
-            android:layout_height="@dimen/dimen_16"
-            android:layout_marginEnd="@dimen/margin_4"
-            android:contentDescription="@string/back"
-            android:src="@drawable/ios_arrow_right" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_calendar_next"
+            android:layout_margin="@dimen/margin_4"
+            android:layout_width="@dimen/dimen_30"
+            android:layout_height="@dimen/dimen_30"
+            app:cardCornerRadius="@dimen/dimen_30">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_12"
+                android:layout_height="@dimen/dimen_12"
+                android:contentDescription="@string/next"
+                android:src="@drawable/ios_arrow_right"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <View
