--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -85,17 +85,22 @@
                             android:paddingVertical="@dimen/padding_12"
                             tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
 
-                        <EditText
-                            style="@style/etNormal"
+                        <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_marginStart="@dimen/margin_8"
-                            android:layout_marginTop="@dimen/margin_20"
                             android:layout_weight="1"
-                            android:background="@drawable/back_edit_text"
-                            android:hint="@string/input_field_2"
-                            android:inputType="text"
-                            android:paddingVertical="@dimen/padding_12"
-                            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
+                            android:layout_marginTop="@dimen/margin_20"
+                            android:layout_marginStart="@dimen/margin_8"
+                            android:layout_height="@dimen/dimen_40"
+                            android:background="@drawable/back_login_btn"
+                            android:gravity="center"
+                            android:onClick="onClickSignIn">
+
+                            <TextView
+                                style="@style/txtLoginBtn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/submit" />
+                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
