completed android version

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,10 +29,10 @@
                 android:layout_height="@dimen/_310sdp" />
 
             <androidx.cardview.widget.CardView
-                android:layout_marginTop="@dimen/margin_12"
-                android:layout_marginHorizontal="@dimen/margin_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_4"
+                android:layout_marginTop="@dimen/margin_12"
                 android:elevation="5dp"
                 android:outlineAmbientShadowColor="@color/blue"
                 android:outlineSpotShadowColor="@color/blue"
@@ -72,28 +73,30 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
-                        <EditText
-                            style="@style/etNormal"
-                            android:layout_width="0dp"
-                            android:layout_marginTop="@dimen/margin_20"
-                            android:layout_weight="1"
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_8"
                             android:background="@drawable/back_edit_text"
-                            android:hint="@string/input_field_1"
-                            android:inputType="text"
-                            android:paddingVertical="@dimen/padding_12"
-                            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
+                            android:orientation="horizontal">
+
+                            <Spinner
+                                android:id="@+id/sp_calendar_status"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:spinnerMode="dropdown" />
+                        </RelativeLayout>
 
                         <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_marginTop="@dimen/margin_20"
-                            android:layout_marginStart="@dimen/margin_8"
+                            android:id="@+id/ll_calendar_submit"
+                            android:layout_width="match_parent"
                             android:layout_height="@dimen/dimen_40"
+                            android:layout_marginHorizontal="@dimen/margin_30"
+                            android:layout_marginTop="@dimen/margin_12"
                             android:background="@drawable/back_login_btn"
-                            android:gravity="center"
-                            android:onClick="onClickSignIn">
+                            android:gravity="center">
 
                             <TextView
                                 style="@style/txtLoginBtn"
@@ -163,8 +166,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_20"
                 android:layout_marginHorizontal="@dimen/margin_4"
+                android:layout_marginTop="@dimen/margin_20"
                 android:background="@drawable/back_mood"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
