--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -39,7 +39,7 @@
                 style="@style/txtLoginTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/articles" />
+                android:text="@string/articles_title" />
 
             <TextView
                 android:id="@+id/tv_article_date"
