--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -71,12 +71,14 @@
     <View
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:visibility="gone"
         android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_56"
         android:layout_marginHorizontal="@dimen/margin_50"
+        android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/back_login_btn"
         android:gravity="center_vertical"
         android:onClick="onClickSignup"
@@ -108,11 +110,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_20"
         android:text="@string/or_singup_with"
+        android:visibility="gone"
         android:textColor="@color/textHintColor" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:paddingVertical="@dimen/padding_12">
 
         <Button
