--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,6 +50,7 @@
         android:id="@+id/cv_profile_pinlock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginHorizontal="@dimen/margin_4"
         android:layout_marginVertical="@dimen/margin_8"
         app:cardCornerRadius="@dimen/radius_16">
