--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/bottom_calendar"/>
     <item
         android:id="@+id/bn_article"
-        android:title="@string/articles"
+        android:title="@string/insights"
         android:icon="@drawable/bottom_article"/>
     <item
         android:id="@+id/bn_prediction"
@@ -14,6 +14,6 @@
         android:icon="@drawable/bottom_prediction"/>
     <item
         android:id="@+id/bn_profile"
-        android:title="@string/profile"
+        android:title="@string/settings"
         android:icon="@drawable/bottom_profile"/>
 </menu>
