--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,11 +59,17 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="txtSkipBtn" parent="txtLoginBtn">
+        <item name="android:textColor">@color/blue</item>
+    </style>
+
     <style name="txtLoginForgot">
         <item name="android:textSize">@dimen/font_14</item>
         <item name="android:textAlignment">center</item>
         <item name="fontFamily">@font/montserrat_bold</item>
         <item name="android:textColor">@color/blue</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
     </style>
 
     <style name="txt_400_12">
